syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_update_user.proto";
import "rpc_login_user.proto";
import "rpc_create_account.proto";
import "rpc_get_account.proto";
import "rpc_transfer.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/AradTenenbaum/BackendCourse/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.5";
    contact: {
      name: "Arad Tenenbaum";
      url: "https://github.com/AradTenenbaum/BackendCourse";
      email: "arad.tenen@gmail.com";
    };
  };
};

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to create new user";
          summary: "Create new user";
        };
    }
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
      option (google.api.http) = {
          patch: "/v1/update_user"
          body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "Use this API to update user";
        summary: "Update user";
      };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to login and get access and refresh tokens";
          summary: "Login user";
        };
    }
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
      option (google.api.http) = {
          post: "/v1/create_account"
          body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "Use this API to creates a new account";
        summary: "Create a new account";
      };
    }
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {
      option (google.api.http) = {
          post: "/v1/get_account"
          body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "Use this API to get a specific account";
        summary: "Get a specific account";
      };
    }
    rpc Transfer (TransferRequest) returns (TransferResponse) {
      option (google.api.http) = {
          post: "/v1/transfer"
          body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "Use this API to transfer money between accounts";
        summary: "Tansfer money between accounts";
      };
    }
}